--- a/application.yml
+++ b/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/krish/spring-cloud-config
+          uri: https://github.com/sandeepkr1992/springboot-cloud-config-store.git
           search-paths:
            - '*service'
 
